<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos">
    <string name="app_name">VLP</string>
    <string name="VIG_name">Vigor</string>
    <string name="VIG_description">Fuerza y de resistencia física, fuerza de empuje, saltar, nadar, correr, trepar, aguantar la respiración.</string>
    <string name="LOG_name">Lógica</string>
    <string name="LOG_description">Inteligencia, conocimientos, persuasión, engaño, labia, comprensión, manipulación y resistencia Arcana.</string>
    <string name="PRE_name">Precisión</string>
    <string name="PRE_description">Coordinación, reflejos, percepción, sigilo, esquiva y puntería.</string>
    <string name="ENERGETIC">Enérgico</string>
    <string name="RESTED">Descansado</string>
    <string name="TIRED">Cansado</string>
    <string name="FATIGATED">Fatigado</string>
    <string name="EXHAUSTED">Agotado</string>
    <string name="VITAL_name">Energía Vital</string>
    <string name="VITAL_description">Representa la confluencia de tus energías físicas y mentales, las cuales tienen diferentes orígenes, pero la misma función y utilidad.\n-Recuperaras Energía alimentándote, o descansando plácidamente (1 cada 4 horas).</string>
    <string name="FURY_name">Furia</string>
    <string name="FURY_description">Obtienes fuerzas de la pasión y la rabia, incluso a veces del dolor o el rencor. Común entre guerreros barbáricos, demonios, y magos de fuego.\n-No recuperaras Energía alimentándote, descansando o durmiendo (debes seguir haciéndolo para mantenerte vivo.)\n-Recuperas 1 punto de Energía bebiendo alcohol (botella entera), y recuperarás 1 cada vez que aciertes un ataque o cada vez que recibas daño (más de un daño a la vez cuenta como uno, debe ser al menos 1 punto de daño). Cada ronda que termine sin que tú hayas acertado en un ataque o recibido daño, te hace perder 1 punto de Energía, pero no a menos de 1.\n-Si te quedas sin Energía, caerás inconsciente hasta pasadas 4 horas o hasta que alguien te de alcohol. Despertarás con 1 punto de Energía.</string>
    <string name="DIVINE_name">Favor Divino</string>
    <string name="DIVINE_description">Tus energías son otorgadas por una fuente divina a la cual te dedicas. Típico en sacerdotes, paladines, ángeles y seres de ascendencia divina.\n-No recuperaras energía alimentándote, descansando o durmiendo (debes seguir haciéndolo para mantenerte vivo.)\n-Recuperaras 1 Punto de Energía cada 2 horas de meditación y rezo (si meditas en un templo, obtendrás 1 adicional). Eliminando a los enemigos de tu Deidad recuperas 1 Puntos de Energía, y asistiendo a sus fieles, ganaras 2 Puntos de Energía. A la vez, debes respetar todas las órdenes de tu Deidad. Hiriendo a fieles de tu misma Deidad, perderás 1 Punto de Energía.\n-Con 0 Puntos de Energía, te desmayaras hasta que permanezcas 4 horas dentro de un templo a tu Deidad. Despertarás con 1 punto de Energía.</string>
    <string name="BLOOD_name">Sed de Sangre</string>
    <string name="BLOOD_description">Te alimentas de la sangre de los vivos. Los vampiros son un buen ejemplo.\n-Recuperaras Energía alimentándote de seres vivos (no puedes comer alimento regular),descansando (1 cada 4 horas).\n-Para alimentarte de sangre, debes hacerlo de una presa viva (Debe ser Capturada o debe estar Inconsciente, en caso contrario, no puede ser consumida. La alimentación es casi instantánea.), los objetivos te proveen Puntos de Energía iguales a su RES o iguales a su cantidad de Puntos de Salud. Puedes alimentarte sin matarlos, pero reducirás su RES o Puntos de Salud en la cantidad de Puntos de Energía que has Recuperado.\n-Si te quedas sin Energía, caes inconsciente hasta que huelas sangre. Despertarás con 1 punto de Energía.</string>
    <string name="ACUATIC_name">Esencia Acuática</string>
    <string name="ACUATIC_description">Tus energías están profúndamente conectadas con tu contacto con el agua, y tu hidratación. Los tritones y algunos magos de Agua poseen esta forma de Energía.\n-No recuperaras Energía alimentándote o durmiendo (debes seguir haciéndolo para mantenerte vivo.)\n-Recuperas 1 punto de Energía por cada 4 horas de descanso cerca de grandes cuerpos de agua, teniendo un momento de conexión con ella, o bebiendo una botella entera de agua limpia.\n-Si te quedas sin Energía, caerás inconsciente hasta pasadas 4 horas o tu cuerpo entre en contacto con una fuente de agua. Despertarás con 1 punto de Energía.</string>
    <string name="AIR_name">Esencia Aérea</string>
    <string name="AIR_description">El aire y los cielos te dan la Energía necesaria para seguir adelante. Muchas razas de hombres-pájaro y magos de viento utilizan esta manera de mantenerse.\n-No recuperaras Energía alimentándote o durmiendo (debes seguir haciéndolo para mantenerte vivo.)\n-Recuperas 1 punto de Energía por cada 2 horas de descanso, y si descansas en un lugar alto o ventoso recuperas 1 adicional. O teniendo un momento de conexión con el aire.\n-Si te quedas sin Energía, caerás inconsciente hasta pasadas 4 horas. Despertarás con 1 punto de Energía.</string>
    <string name="MEDITATION_name">Meditación</string>
    <string name="MEDITATION_description">Tus energías dependen de tu balance espiritual, independientemente de tu religión o creencia. Necesitas paz y concentración.\n-No recuperaras Energía alimentándote o durmiendo (debes seguir haciéndolo para mantenerte vivo.)\n-Recuperas 1 punto de Energía por cada 2 horas de meditación, y si meditas en un lugar hermoso o tranquilo recuperas 1 adicional. También cada vez que superes una tirada para resistir daño mental o miedo.\n-Si te quedas sin Energía, caerás inconsciente hasta pasadas 4 horas. Despertarás con 1 punto de Energía.</string>
    <string name="HEALTHY_name">Saludable</string>
    <string name="HEALTHY_description">Ileso, tal vez algunos rasguños.\n-Dificultad para tratar: 0.</string>
    <string name="INJURED_name">Herido</string>
    <string name="INJURED_description">Leves heridas, algo de dolor, pero nada de que preocuparse aún.\n-Dificultad para tratar: 1.</string>
    <string name="CRIPPLED_name">Lisiado</string>
    <string name="CRIPPLED_description">Heridas graves, dificultad para moverse y realizar esfuerzo.\n-El dado más alto de tus tiradas de PRE y VIG tiene un penalizador de -1.\n-Dificultad para tratar: 3.</string>
    <string name="UNCONSCIOUS_name">Inconsciente</string>
    <string name="UNCONSCIOUS_description">Perdiste el conocimiento.\n-No puedes realizar ninguna acción.\n-Si posees hemorragias, morirás en 20 o 30 minutos.\n-Dificultad para tratar: 4.</string>
    <string name="DEAD_name">Muerto</string>
    <string name="DEAD_description">Cesaste toda función vital.\n-Debes crear otro personaje.</string>
    <string name="SANE_name">Cuerdo</string>
    <string name="SANE_description">Tranquilo, tal vez con un poco de miedo.</string>
    <string name="NERVOUS_name">Nervioso</string>
    <string name="NERVOUS_description">Preocupado, molesto, pero todavía puedes continuar.</string>
    <string name="UNSTABLE_name">Inestable</string>
    <string name="UNSTABLE_description">Muy asustado, dificultad para pensar lógicamente y concentrarse.\n-El dado más alto en cada una de tus tiradas de LOG recibe un penalizador de -1.</string>
    <string name="SHOCKED_name">Conmocionado</string>
    <string name="SHOCKED_description">Estás en shock, no puedes procesar lo que te rodea.\n-No puedes realizar ninguna acción hasta pasadas 1d6 horas.</string>
    <string name="CRAZY_name">Demente</string>
    <string name="CRAZY_description">Tu mente se ha perdido en el laberinto de los Mundos Ocultos.\n-Debes crear otro personaje.</string>
    <string name="HUMAN_name">Humano</string>
    <string name="HUMAN_description">Los humanos son tan comunes como variados, y lograron adaptarse a casi todos los biomas y culturas. Los humanos no tienen requisitos, son la base.</string>
    <string name="GOBLIN_description">La plaga del mundo. Amigos de las ratas y los lobos. No entiendo por que alguien querría rolear un goblin, la verdad. Seguro necesitás llamar la atención.</string>
    <string name="GOBLIN_name">Goblin</string>
    <string name="PRETORIAN_name">Pretoriano</string>
    <string name="PRETORIAN_desciption">Famosos por todo el Mundo Viejo por gobernar un imperio que solo es igualado por los centauros mongoles, se hacen llamar la base de la civilización. La conquista, la guerra, la intriga política, y el tributo son todo para ellos. Viven para expandirse, batallar, y deleitarse con el botín de sus colonias.</string>
    <string name="BUGBEAR_name">Bugbear</string>
    <string name="BUGBEAR_description">Presentes en los bosques de Europa y en las selvas de Oceanía, estos expertos emboscadores veneran a dioses salvajes y sanguinarios. Son civilizados, pero agresivos.</string>
    <string name="TRITON_name">Tritón</string>
    <string name="TRITON_description">Gentes del mar, estos seres subacuáticos pueden caminar por la tierra, pero no suelen hacerlo salvo que tengan una buena razón. Escondidos en las profundidades, esperan y vigilan.</string>
    <string name="CAT_MAN_name">Hombre-Gato</string>
    <string name="CAT_MAN_description">No hay un nombre específico para esta raza, pues hay diferentes hombres y mujeres gato repartidos por todo el Mundo. Los del centro africano suelen llevar melena, mientras que los del Nuevo Mundo llevan manchas, y los faraones egipcios son completamente lampiños. Las gentes les llaman, simplemente, Hombres-Gato.</string>
    <string name="REPTILIAN_name">Reptiliano</string>
    <string name="REPTILIAN_description">Habitantes de los pantanos más peligrosos del Mundo, esta raza extraña y sanguinaria vive para sobrevivir y nada más. Son racionales, pero fríos, y son exclusivamente carnívoros.</string>
    <string name="YARA_name">Yara</string>
    <string name="YARA_description">Los emperadores de la Jungla Eterna solían ser humanos, hasta que una pretensión divina les llevó a cambiar sus cuerpos para asemejarse más a sus dioses ofidios. Un punto entre humanos y serpientes, estos seres son todos fanáticos religiosos obsesionados con el estatus. Implacables, sanguinarios, y protectores con su Jungla.</string>
    <string name="TEZCA_name">Tezca</string>
    <string name="TEZCA_description">Habitantes del Nuevo Mundo, comparten junto a los humanos la soberanía sobre todo el continente exceptuando la Jungla Eterna y las montañas. Desde tiempos más antiguos que el tiempo, estos humanoides amarillentos poseen habilidades psíquicas innatas.</string>
    <string name="ANDEAN_name">Andino</string>
    <string name="ANDEAN_description">Señores de las montañas del Nuevo Mundo, vigilan las alturas con sus majestuosas alas emplumadas y su vista de águila.</string>
    <string name="INFERNAL_name">Infernal</string>
    <string name="INFERNAL_description">Los hijos de los Demonios y los mortales suelen ser bestias malditas y corrompidas, pero si la línea de sangre se diluye aún más puede dar como resultado un Infernal. Semi-Demonios, discriminados por casi todos en el mundo, pocos saben que su herencia abismal no cambia su personalidad.</string>
    <string name="NEFILIM_name">Nefilim</string>
    <string name="Race">Raza</string>
    <string name="Choose">Elegir</string>
    <string name="Description">Descripción</string>
    <string name="Energy_Type">Tipo de Energía</string>
    <string name="Aptitude">Aptitud</string>
    <string name="Base_Weight">Peso Base</string>
    <string name="Save">Guardar</string>
    <string name="Name">Nombre</string>
    <string name="New_Character">Nuevo Personaje</string>
    <string name="Value">Valor</string>
    <string name="Properties">Propiedades</string>
    <string name="Weight">Peso</string>
    <string name="Hardness">Dureza</string>
    <string name="Capacity">Capacidad</string>
    <string name="Damage">Daño</string>
</resources>