<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Name"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/new_weapon_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Damage"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/new_weapon_damage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Aptitude"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <Button
                android:id="@+id/new_weapon_aptitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/Choose" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Properties"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/new_weapon_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Capacity"
                android:textAlignment="viewEnd"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/new_weapon_capacity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="3"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Hardness"
                android:textAlignment="viewEnd"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/new_weapon_hardness"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="3"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Weight"
                android:textAlignment="viewEnd"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/new_weapon_weight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="3"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Value"
                android:textAlignment="viewEnd"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/new_weapon_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="3"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>